# cal3d-rs

./: .gitignore  Cargo.toml  TODO
src/: animation.rs  bone.rs  lib.rs  mesh.rs  mixer.rs  model.rs  morphtargetmixer.rs  physique.rs  renderer.rs  skeleton.rs  springsystem.rs  submesh.rs
src/core/: animation.rs  bone.rs  bufreadersource.rs  datasource.rs  keyframe.rs  loader.rs  material.rs  mesh.rs  mod.rs  model.rs  skeleton.rs  submesh.rs  submorphtarget.rs  track.rs  xmlformat.rs
src/tools/cally/: demo.rs  main.rs  menu.rs  mod.rs  model.rs  models.rs  sprite.rs  tick.rs
src/tools/cally/graphics/: camera.rs  characterrenderer.rs  error.rs  font.rs  glslprogram.rs  image.rs  linerenderer.rs  mod.rs  screen.rs  sprite.rs  spriterenderer.rs  text.frag  text.vert  textrenderer.rs  worldglslprogram.rs
src/vector/: blend.rs  bounding.rs  mod.rs  plane.rs
