[package]
name = "cal3d"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cally"
path = "src/tools/cally/main.rs"

[dependencies]
byteorder = "1.5.0"
cgmath = "0.18.0"
clap = { version = "4.5.26", features = ["derive"] }
image = "0.25.5"
once_cell = "1.20.2"
roxmltree = "0.20.0"
sscanf = "0.4.2"
xmlparser = "0.13.6"
